resolving an image issue not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ main{
 
 
 .image-container{
-    background-image: url("/assets/images/image-web-3-mobile.jpg");
+    background-image: url("assets/images/image-web-3-mobile.jpg");
     height: 300px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -217,7 +217,7 @@ h1{
     }
 
     .image-container{
-        background-image: url("/assets/images/image-web-3-desktop.jpg");
+        background-image: url("assets/images/image-web-3-desktop.jpg");
         height: 500px;
         background-size: contain;
         grid-column: span 2;
